--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
   cancel: 'Cancel'
   edit: 'Edit'
   delete: 'Delete'
+  new_tip: 'New tip'
   comment: 'comment'
   home:
     title: 'Share your programming tips with other developers online!'
@@ -70,6 +71,14 @@ en:
     has_created: 'Has created'
     and_made: 'and made'
     member_since: 'Has been member of Pro Tips for'
+  accounts:
+    edit:
+      title: 'Update your account'
+    tips:
+      title: 'Your tips'
+    links:
+      account: 'Account'
+      tips: 'Tips'
   helpers:
     label:
       tip:
