--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,12 +30,17 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  signup: 'Sign up'
-  login: 'Log in'
-  cancel: 'Cancel'
-  edit: 'Edit'
-  delete: 'Delete'
-  new_tip: 'New tip'
+  links:
+    signup: 'Sign up'
+    login: 'Log in'
+    logout: 'Log out'
+    cancel: 'Cancel'
+    account: 'Account'
+    users: 'Users'
+    tips: 'Tips'
+    edit: 'Edit'
+    delete: 'Delete'
+    new_tip: 'New tip'
   comment: 'comment'
   home:
     title: 'Share your programming tips with other developers online!'
@@ -71,14 +76,11 @@ en:
     has_created: 'Has created'
     and_made: 'and made'
     member_since: 'Has been member of Pro Tips for'
-  accounts:
+  account:
     edit:
       title: 'Update your account'
     tips:
       title: 'Your tips'
-    links:
-      account: 'Account'
-      tips: 'Tips'
   helpers:
     label:
       tip:
