Use locale for text in sessions#new view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,9 @@ en:
       title: 'Update your account'
     tips:
       title: 'Your tips'
+  sessions:
+    new:
+      title: 'Log in'
   helpers:
     label:
       tip:
