Comment date is diplayed with time_ago_in_words and add the french translation for the method

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
   comments:
     title: 'Comments'
     added_by: 'Added by'
+    date: "%{time} ago"
     add_comment: 'Add your own comment'
     post: 'Post comment'
   users:
