Add role in users#edit form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
         name: 'Name'
         avatar_url: 'Avatar URL'
         password: 'Password'
+        role: 'Role'
     submit:
       tip:
         create: 'Create Tip'
